add api, models and mappers

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
+datetimeVersion=0.3.2
+jacksonVersion=2.12.5
 kotlin.code.style=official
+kotlinCompileVersion=1.5.10
+kotlinVersion=1.5.10
+openApiVersion=6.0.1
